@@ -362,9 +362,9 @@ CONFIG_INPUT_ADS7843E=y
 # CONFIG_ADS7843E_MULTIPLE is not set
 CONFIG_ADS7843E_SPIMODE=0
 CONFIG_ADS7843E_FREQUENCY=100000
-# CONFIG_ADS7843E_SWAPXY is not set
-CONFIG_ADS7843E_THRESHX=12
-CONFIG_ADS7843E_THRESHY=12
+CONFIG_ADS7843E_SWAPXY=y
+CONFIG_ADS7843E_THRESHX=39
+CONFIG_ADS7843E_THRESHY=51
 # CONFIG_INPUT_STMPE811 is not set
 CONFIG_LCD=y
 # CONFIG_LCD_NOGETRUN is not set
